HaloMythic3dot5.css
/* ... */
.sheet-initiative_container {
	display: grid;
	grid-template-columns: 100px 90px 18px 50px 18px 90px;
}

.sheet-init_field {
	height: 100%;
	margin-right: -60px;
	width:85px;
}

.sheet-init_plus {
	font-size: 24px;
	font-weight: bold;
	padding-top: 12px;
}

.sheet-sheet_tabs {
	justify-content: right;
	margin-right: 3px;
	display: grid;
	grid-template-columns: 45px 75px 60px 95px 60px 60px 45px;
}



/* ______________________________ end of grid structure for initiative and sheet tabs ______________________________
______________________________ start of tab buttons toggles ______________________________ */



.sheet-core,
.sheet-medical,
.sheet-equipment,
.sheet-advancements,
.sheet-journal,
.sheet-vehicles,
.sheet-settings { display: none }
/* show the selected tab */

.sheet-tabstoggle[value='core'] ~ div.sheet-core,
.sheet-tabstoggle[value='equipment'] ~ div.sheet-equipment,
.sheet-tabstoggle[value='medical'] ~ div.sheet-medical,
.sheet-tabstoggle[value='advancements'] ~ div.sheet-advancements,
.sheet-tabstoggle[value='journal'] ~ div.sheet-journal,
.sheet-tabstoggle[value='vehicles'] ~ div.sheet-vehicles,
.sheet-tabstoggle[value='settings'] ~ div.sheet-settings { display: block }
.sheet-core_bttn:checked + button {
	background: rgb(200, 0, 0);
	color: white;
	vertical-align: center;
}



/* ______________________________ end of tab buttons toggles ______________________________
______________________________ start of minimisable infographic ______________________________ */



.sheet-select_text {
	background: #394C6A;
	border: 1px solid white;
	border-radius: 4px;
	color:white; font-family: Saira Semi Condensed;
	padding: 0px 4px 0px 4px;
}
.sheet-select_button:checked ~ .sheet-select_text { background: rgb(200, 0, 0); }

.sheet-minimisable_infographic_main { margin-left: 5px; }

.sheet-minimisable_infographic_toggles {
	display: grid;
	grid-template-columns: 90px 51px auto;
}

.sheet-minimisable_infographic_grid {
	display: grid;
	grid-template-columns: 100px 100px 100px 100px 185px 185px;
}

.sheet-minimisable_infographic_g1 { grid-area: mi1; background:#394C6A !important; border: 0px solid transparent; font-family: Orbitron !important; letter-spacing: 1px; justify-self: center; width: calc(100% - 6px); }
.sheet-minimisable_infographic_g2 { grid-area: mi2; color:white; justify-self: right; margin-top: 3px; margin-right: 3px; }
.sheet-minimisable_infographic_g3 { grid-area: mi3; border-right: 1px solid #394C6A; }
.sheet-minimisable_infographic_g4 { grid-area: mi4; color:white; justify-self: right; margin-top: 3px; margin-right: 3px; }
.sheet-minimisable_infographic_g5 { grid-area: mi5; border-right: 1px solid #394C6A; border-bottom: 1px solid #394C6A; border-bottom-right-radius: 10px; }
.sheet-minimisable_infographic_field2x3 {
	background: #506b95;
	margin-right: 10px;
	display: grid;
	grid-template-columns: 53px 40px;
	grid-template-rows: 25px 25px 25px;
	grid-template-areas:
	'mi1 mi1'
	'mi2 mi3'
	'mi4 mi5';
}

.sheet-minimisable_infographic_g6 { grid-area: mi6; color: white; font-family: Saira Semi Condensed; justify-self: right; margin-top: 3px; margin-right: 3px; }
.sheet-minimisable_infographic_g7 { grid-area: mi7; }
.sheet-minimisable_infographic_g8 { grid-area: mi8; color:white; font-family: Saira Semi Condensed; justify-self: right; margin-top: 3px; margin-right: 3px; }
.sheet-minimisable_infographic_g9 { grid-area: mi9; border-bottom: 1px solid #394C6A; }
.sheet-minimisable_infographic_field4x3 {
	background: #506b95;
	margin-right: 10px;
	display: grid;
	grid-template-columns: 50px 40px 45px 40px;
	grid-template-rows: 25px 25px 25px;
	grid-template-areas:
	'mi1 mi1 mi1 mi1'
	'mi6 mi7 mi2 mi3'
	'mi8 mi9 mi4 mi5';
}



/* ______________________________ end of minimisable infographic ______________________________
______________________________ start of core tab ______________________________ */



.sheet-core_lists1 { grid-area: cl1; margin-right: 10px; }
.sheet-core_lists2 { grid-area: cl2; margin-bottom: 5px; }
.sheet-core_lists3 { grid-area: cl3; margin-top: 5px; }
.sheet-core_lists {
	display: grid;
	grid-template-columns: 400px auto;
	grid-template-areas:
	'cl1 cl2'
	'cl1 cl3';
}

.sheet-skills_item { margin: 7px 5px; }
.sheet-skills_text { margin: 4px 0px; }
.sheet-skills_diff { margin-left: 8px; }
.sheet-text_left { text-align: left !important; }

.sheet-skill_header {
	border-bottom: 1px dotted darkgrey;
	margin-top: 7px;
	display: grid;
	grid-template-columns: auto 28px 63px 56px 21px 30px 38px 30px;
	grid-template-rows: 23px;
}

.sheet-skill_grid {
	border-bottom: 1px dotted darkgrey;
	padding-top: 1.5px;
	padding-bottom: 1.5px;
	display: grid;
	grid-template-columns: auto 53px 64px 50px 30px 30px 30px 35px;
	grid-template-rows: 27px;

}
.sheet-education_grid {
	border-bottom: 1px dotted darkgrey;
	padding-top: 1.5px;
	padding-bottom: 1.5px;
	display: grid;
	grid-template-columns: auto 63px 55px 30px 30px 35px;
	grid-template-rows: 27px;
}

.sheet-education_header {
	border-bottom: 1px dotted darkgrey;
	margin-top: 7px;
	display: grid;
	grid-template-columns: auto 63px 55px 25px 38px 30px;
	grid-template-rows: 23px;
}

.sheet-abilities_checkbox_pointer {
	margin-top: -21px;
	margin-right: 5px;
	text-align: right;
}



/* ______________________________ end of core tab ______________________________
______________________________ start of equipment tab ______________________________ */



.sheet-equipment_divider {
	display: grid;
	grid-template-columns: 49.5% 1% 49.5%;
	grid-template-areas:
	'e1 e0 e2'
	'e3 e3 e3';
}

.sheet-equipment_ranged_weapons { grid-area: e1; background:#475f85; border-radius: 10px; padding: 2px; }
.sheet-equipment_melee_weapons { grid-area: e2; background:#475f85; border-radius: 10px; padding: 2px; }
.sheet-equipment_numerics {      grid-area: e3; margin-top: 10px; }
.sheet-equipment_ranged_weapons_rep { background:#475f85; border:1px solid white; border-radius: 10px; padding: 2px; }
/* ... */

